--- a/src/app/incomplete/incomplete.component.html
+++ b/src/app/incomplete/incomplete.component.html
@@ -1,1 +1,1 @@
-<p>Yet to implement page!!</p>
+<app-custom-grid [gridData]="tableData" [columns]="tableColumns" [filterColumns]="tableFilters"></app-custom-grid>
