--- a/src/app/incomplete/incomplete.component.html
+++ b/src/app/incomplete/incomplete.component.html
@@ -1,1 +1,1 @@
-<app-custom-grid [gridData]="tableData" [columns]="tableColumns" [filterColumns]="tableFilters"></app-custom-grid>
+<app-custom-grid [gridData]="tableData" [columns]="tableColumns" [filterColumns]="tableFilters" [totalLength]="gridDataLength"></app-custom-grid>
